Changelog
=========


1.10.1 (unreleased)
-------------------

- Use portal title on root_node. [mathias.leimgruber]


1.10.0 (2018-05-25)
-------------------

- Allow option for ignoring exluded content.


1.9.0 (2018-05-24)
------------------

- Allow opening top level tabs directly. [Kevin Bieri]
- Allow showing leafnote siblings. [Kevin Bieri]


1.8.0 (2018-03-19)
------------------

- Fix getting children if the root is not the portal_root. [mathias.leimgruber]

- Make compatible with ftw.theming 2.0.0. [Kevin Bieri]


1.7.0 (2017-06-02)
------------------

- Fix scroll behavior of top level tabs in mobile navigation. [Kevin Bieri]
- Fix: ftw.testbrowser compatibility. [mathias.leimgruber]
- Set focus on active element on the tab navs [Kevin Bieri]
- Make possible to close the navigation using Escape key [Kevin Bieri]
- Skip links in the mobile menu when it's closed [Kevin Bieri]
- Fix icon size for IE11 in mobile navigation [Kevin Bieri]
- Fix offset of overlay in IE11 and Edge [Kevin Bieri]
- Introduce swipe gesture for closing the mobile menu. [Kevin Bieri]


1.6.6 (2017-02-16)
------------------

- Fix mobile menu transition on IE>=9.
  [Kevin Bieri]


1.6.5 (2017-01-18)
------------------

- Set the `children_loaded` flag on prepended nodes too.
  [mathias.leimgruber]

- Append current context path to `prepend_unauthorized_parents`, because the current obj may
  be excluded from nav.
  [mathias.leimgruber]


1.6.4 (2016-12-01)
------------------

- Do not detach script tags of type x-handlebars-template. jQuery is not able to re-attach them.
  [mathias.leimgruber]


1.6.3 (2016-11-25)
------------------

- Close the mobile-navigation when the screen size changes from mobile
  to desktop while the navigation is open.
  [raphael-s]


1.6.2 (2016-11-09)
------------------

- Actually mark external links with a "external-link" class in navtree.
  [mathias.leimgruber]


1.6.1 (2016-11-08)
------------------
