@@ -5,6 +5,7 @@ Changelog
 1.10.1 (unreleased)
 -------------------
 
+- Fix JS error in arrowScrollController if there are no topLevelTabs. [mathias.leimgruber]
 - Use portal title on root_node. [mathias.leimgruber]
 
 
